--- a/index.html
+++ b/index.html
@@ -174,15 +174,15 @@
 			
 			
 			<div class="col-md-4 portfolio-pic">
-				<a href="#" target="_blank">
+				<a href="https://www.dropbox.com/s/4bhu5y2l5sf16l7/Thesis-Erin%20Carlson.pdf?dl=0" target="_blank">
 					<img class="img-responsive" src="images/thesis.png">
 				</a>
 				
 				<h3>
-					<a href="#" target="_blank">Undergraduate Thesis</a>
+					<a href="https://www.dropbox.com/s/4bhu5y2l5sf16l7/Thesis-Erin%20Carlson.pdf?dl=0" target="_blank">Undergraduate Thesis</a>
 				</h3>
 
-				<p>While I wrote this years ago, it is still one of my greatest achievements to date--though some say it is sleep-inducing. So, feel free to read on if you are literary-minded or suffering from insomnia ;).</p>
+				<p>While I wrote this years ago, it is still one of my greatest achievements to date--although I have to admit that most of my friends find it sleep-inducing. So, feel free to read on if you are literary-minded or suffering from insomnia ;).</p>
 			</div>
 
 		
