--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<div class="container">
 
 		<div class="oldWork">
-			<h2>PORTFOLIO | Erin Carlson</h2>
+			<h2>PORTFOLIO | Erin Kate Carlson</h2>
 		</div>
 
 		<p><h3>Erin graduated <i>magna cum laude</i> from Cornell University in 2011 with a double major in English and Spanish. She promptly surprised everyone she knew--and particularly herself--by accepting a job in an engineering capacity at MicroStrategy. Since then, her interests have grown in a more technical direction, but her penchant for spontaneous international travel, long walks in DC, and warm chocolate croissants remains unchanged.</h3></p>
