--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="container-fluid">
 			<p class="navbar-text">Portfolio</p>
 			<p class="navbar-text"><a href="pages/resume.html">Resume</a></p>
-			<p class="navbar-text"><a href="pages/education.html">Education</a></p>
+			<p class="navbar-text"><a href="pages/education.html">Reading List</a></p>
 		</div>
 	</div>
 
