add divs to reading list

--- a/pages/education.html
+++ b/pages/education.html
@@ -26,26 +26,28 @@
 			<h2>READING LIST</h2>
 		</div>
 
-		<h3><b>What is she reading now?</b></h3>
-		<h3>Titan: The Life of John D. Rockefeller, Sr. | Ron Chernow</h3>
+		<div>
+			<h3><b>What is she reading now?</b></h3>
+			<h3>Titan: The Life of John D. Rockefeller, Sr. | Ron Chernow</h3>
+		</div>
+
+		<div>
+			<h3><b>Upcoming Books (Any recommendations?)</b></h3>
+			<h3>The Concise 48 Laws of Power | Robert Greene</h3>
+			<h3>High Output Management | Andrew S. Grove</h3>
+		</div>
 
 
-		<h3><b>Upcoming Books (Any recommendations?)</b></h3>
-		<h3>The Concise 48 Laws of Power | Robert Greene</h3>
-		<h3>High Output Management | Andrew S. Grove</h3>
-
-
-
-
-		<h3><b>Old Favorites</b></h3>
-		<h3>The Design of Everyday Things | Don Norman</h3>
-		<h3>Softwar | Matthew Symonds</h3>
-		<h3>Escape Velocity | Geoffrey A. Moore</h3>
-		<h3>The Effective Executive | Peter F. Drucker</h3>
-		<h3>My Years with General Motors | Alfred P. Sloan</h3>
-		<h3>Killing Lincoln | Bill O'Reilly and Martin Dugard</h3>
-		<h3>The Lean Startup | Eric Ries</h3>
-
+		<div>
+			<h3><b>Old Favorites</b></h3>
+			<h3>The Design of Everyday Things | Don Norman</h3>
+			<h3>Softwar | Matthew Symonds</h3>
+			<h3>Escape Velocity | Geoffrey A. Moore</h3>
+			<h3>The Effective Executive | Peter F. Drucker</h3>
+			<h3>My Years with General Motors | Alfred P. Sloan</h3>
+			<h3>Killing Lincoln | Bill O'Reilly and Martin Dugard</h3>
+			<h3>The Lean Startup | Eric Ries</h3>
+		</div>
 
 	</div>
 
