--- a/pages/education.html
+++ b/pages/education.html
@@ -32,21 +32,26 @@
 		</div>
 
 		<div>
+			
 			<h3><b>Upcoming Books (Any recommendations?)</b></h3>
-			<h3>The Concise 48 Laws of Power | Robert Greene</h3>
-			<h3>High Output Management | Andrew S. Grove</h3>
+			<ul>
+				<li><h3>The Concise 48 Laws of Power | Robert Greene</h3></li>
+				<li><h3>High Output Management | Andrew S. Grove</h3></li>
+			</ul>
 		</div>
 
 
 		<div>
 			<h3><b>Old Favorites</b></h3>
-			<h3>The Design of Everyday Things | Don Norman</h3>
-			<h3>Softwar | Matthew Symonds</h3>
-			<h3>Escape Velocity | Geoffrey A. Moore</h3>
-			<h3>The Effective Executive | Peter F. Drucker</h3>
-			<h3>My Years with General Motors | Alfred P. Sloan</h3>
-			<h3>Killing Lincoln | Bill O'Reilly and Martin Dugard</h3>
-			<h3>The Lean Startup | Eric Ries</h3>
+			<ul>
+				<li><h3>The Design of Everyday Things | Don Norman</h3></li>
+				<li><h3>Softwar | Matthew Symonds</h3></li>
+				<li><h3>Escape Velocity | Geoffrey A. Moore</h3></li>
+				<li><h3>The Effective Executive | Peter F. Drucker</h3></li>
+				<li><h3>My Years with General Motors | Alfred P. Sloan</h3></li>
+				<li><h3>Killing Lincoln | Bill O'Reilly and Martin Dugard</h3></li>
+				<li><h3>The Lean Startup | Eric Ries</h3></li>
+			</ul>
 		</div>
 
 	</div>
