--- a/pages/education.html
+++ b/pages/education.html
@@ -16,45 +16,54 @@
 		<div class="container-fluid">
 			<p class="navbar-text"><a href="../index.html">Portfolio</a></p>
 			<p class="navbar-text"><a href="resume.html">Resume</a></p>
-			<p class="navbar-text">Reading List</p>
+			<p class="navbar-text">Education</p>
+			<p class="navbar-text"><a href="reading-list.html">Reading List</a></p>
 		</div>
-	</div>
 
 
 	<div class="container">
-		<div class="oldWork">
-			<h2>READING LIST</h2>
+
+		<div class="col-md-4">
+			<div class="imgcenter">
+				<img src="../images/cornell.png">
+			</div>
+
+			<div class="schoolText">
+				<h4><b>Cornell University</b></h4>
+					<h5>Magna Cum Laude | 3.8/4.0</h5>
+					<h5>Completed an honors thesis for the English department; Awarded Alpha Phi Omega's Service Award for most hours of community service completed</h5>
+			</div>
 		</div>
 
-		<div>
-			<h3><b>What is she reading now?</b></h3>
-			<h3>Titan: The Life of John D. Rockefeller, Sr. | Ron Chernow</h3>
+		<div class="col-md-4">
+			<div class="imgcenter">
+				<img src="../images/UPF.jpeg">
+			</div>
+
+			<div class="schoolText">
+				<h4><b>Study Abroad</b></h4>
+					<h5>Universitat Pompeu Fabra | 9.5/10</h5>
+					<h5>Pontificia Universidad Catolica del Peru | 19/20</h5>
+					<h5>Oxford University | A</h5>
+			</div>			
 		</div>
 
-		<div>
-			
-			<h3><b>Upcoming Books (Any recommendations?)</b></h3>
-			<ul>
-				<li><h3>The Concise 48 Laws of Power | Robert Greene</h3></li>
-				<li><h3>High Output Management | Andrew S. Grove</h3></li>
-			</ul>
+		<div class="col-md-4">
+			<div class="imgcenter">
+				<img src="../images/HHS.GIF">
+			</div>
+
+			<div class="schoolText">
+				<h4><b>Healdsburg High School</b></h4>
+					<h5>Graduated first in class | 4.21</h5>
+					<h5>Delivered Valedictorian speech at commencement</h5>
+					<h5>Nominated All League First Team in Basketball, Honorable Mention in Volleyball, and Best in Show at the Healdsburg Science Fair</h5>
+			</div>
 		</div>
-
-
-		<div>
-			<h3><b>Old Favorites</b></h3>
-			<ul>
-				<li><h3>The Design of Everyday Things | Don Norman</h3></li>
-				<li><h3>Softwar | Matthew Symonds</h3></li>
-				<li><h3>Escape Velocity | Geoffrey A. Moore</h3></li>
-				<li><h3>The Effective Executive | Peter F. Drucker</h3></li>
-				<li><h3>My Years with General Motors | Alfred P. Sloan</h3></li>
-				<li><h3>Killing Lincoln | Bill O'Reilly and Martin Dugard</h3></li>
-				<li><h3>The Lean Startup | Eric Ries</h3></li>
-			</ul>
-		</div>
-
+		
 	</div>
+	</div>
+
 
 </body>
 </html>
