--- a/pages/resume.html
+++ b/pages/resume.html
@@ -17,7 +17,8 @@
 		<div class="container-fluid">
 			<p class="navbar-text"><a href="../index.html">Portfolio</a></p>
 			<p class="navbar-text">Resume</p>
-			<p class="navbar-text"><a href="education.html">Reading List</a></p>
+			<p class="navbar-text"><a href="resume.html">Education</a></p>
+			<p class="navbar-text"><a href="reading-list.html">Reading List</a></p>
 		</div>
 	</div>
 
@@ -110,49 +111,8 @@
 
 		</div>
 
-<div class="container">
 
-		<h2>EDUCATION</h2>
 
-		<div class="col-md-4">
-			<div class="imgcenter">
-				<img src="../images/cornell.png">
-			</div>
-
-			<div class="schoolText">
-				<h4><b>Cornell University</b></h4>
-					<h5>Magna Cum Laude | 3.8/4.0</h5>
-					<h5>Completed an honors thesis for the English department; Awarded Alpha Phi Omega's Service Award for most hours of community service completed</h5>
-			</div>
-		</div>
-
-		<div class="col-md-4">
-			<div class="imgcenter">
-				<img src="../images/UPF.jpeg">
-			</div>
-
-			<div class="schoolText">
-				<h4><b>Study Abroad</b></h4>
-					<h5>Universitat Pompeu Fabra | 9.5/10</h5>
-					<h5>Pontificia Universidad Catolica del Peru | 19/20</h5>
-					<h5>Oxford University | A</h5>
-			</div>			
-		</div>
-
-		<div class="col-md-4">
-			<div class="imgcenter">
-				<img src="../images/HHS.GIF">
-			</div>
-
-			<div class="schoolText">
-				<h4><b>Healdsburg High School</b></h4>
-					<h5>Graduated first in class | 4.21</h5>
-					<h5>Delivered Valedictorian speech at commencement</h5>
-					<h5>Nominated All League First Team in Basketball, Honorable Mention in Volleyball, and Best in Show at the Healdsburg Science Fair</h5>
-			</div>
-		</div>
-		
-	</div>
 
 </body>
 </html>
