Added About Me Page
Bug fixes and new page

--- a/pages/education.html
+++ b/pages/education.html
@@ -18,6 +18,7 @@
 			<p class="navbar-text"><a href="resume.html">Resume</a></p>
 			<p class="navbar-text">Education</p>
 			<p class="navbar-text"><a href="reading-list.html">Reading List</a></p>
+			<p class="navbar-text"><a href="about-me.html">About Erin</a></p>
 		</div>
 
 
