--- a/pages/reading-list.html
+++ b/pages/reading-list.html
@@ -16,8 +16,9 @@
 		<div class="container-fluid">
 			<p class="navbar-text"><a href="../index.html">Portfolio</a></p>
 			<p class="navbar-text"><a href="resume.html">Resume</a></p>
-			<p class="navbar-text"><a href="resume.html">Education</a></p>
+			<p class="navbar-text"><a href="education.html">Education</a></p>
 			<p class="navbar-text">Reading List</p>
+			<p class="navbar-text"><a href="about-me.html">About Erin</a></p>
 		</div>
 	</div>
 
