--- a/pages/resume.html
+++ b/pages/resume.html
@@ -17,36 +17,61 @@
 		<div class="container-fluid">
 			<p class="navbar-text"><a href="../index.html">Portfolio</a></p>
 			<p class="navbar-text">Resume</p>
-			<p class="navbar-text"><a href="resume.html">Education</a></p>
+			<p class="navbar-text"><a href="education.html">Education</a></p>
 			<p class="navbar-text"><a href="reading-list.html">Reading List</a></p>
+			<p class="navbar-text"><a href="about-me.html">About Erin</a></p>
 		</div>
 	</div>
 
 	<div class="container">
+
+		<div class="oldWork">
+			<h2>PRODUCT MARKETING MANAGER</h2>
+		</div>
+
+			<div class="col-md-12"
+
+				<h3><b>AWS Cost Management | Amazon Web Services, Inc.</b></h3>
+					<ul>
+						<li>Own the AWS Commerce Platform launch portfolio, spanning 20+ Engineering teams in the AWS Insights, Bill Generation, and FinX spaces</li>
+						<li>Define and oversee the product marketing vision for the AWS Cost Explorer, AWS Budgets, and the AWS Cost & Usage Report products</li>
+						<li>Design, author, and maintain the <a href="www.aws.amazon.com/aws-cost-management">AWS Cost Management</a> marketing webpages</li>
+						<li>Create, publish, and approve blog, tutorial, and launch-related content</li>
+						<li>Set and track product adoption and engagement benchmarks for the team</li>
+						<li>Responsible for overseeing the team’s Monthly Business Review document</li>
+					</ul>
+			</div>
+
+	</div>
+
+		<div class="container">
 
 		<div class="oldWork">
 			<h2>DIRECTOR & AREA PRODUCT OWNER</h2>
 		</div>
-			
-	
-			<div class="col-md-12">
+
+			<div class="col-md-12"
 
 				<h3><b>Tools Product Engineering Group | MicroStrategy, Inc.</b></h3>
 					<ul>
-						<li>Lead innovation tiger team of engineers, architects, and UI/UX designers to first external release</li>
-						<li>Own the product vision and formulate supporting user stories, features, wireframes, and product specs</li>
-						<li>Collaborate daily with the CEO, CTO, and key stakeholders to define the product roadmap</li>
-						<li>Internal product evangelist and presenter at the annual MicroStrategy World conference</li>
+						<li>Led innovation tiger team of engineers, architects, and UI/UX designers to first external release</li>
+						<li>Owned the product vision and formulate supporting user stories, features, wireframes, and product specs</li>
+						<li>Collaborated daily with the CEO, CTO, and key stakeholders to define the product roadmap</li>
+						<li>Acted as internal product evangelist and presenter at the annual MicroStrategy World conference</li>
 						<li>Previous: Managed six product engineering and design teams (30 total reports) during the company’s transition to Agile/Scrum methodologies and Rally Software</li>
-
 					</ul>
-
 			</div>
+
 	</div>
+
+
+
 
 	<div class="container">
 		<div class="oldWork">
 			<h2>TECHNOLOGY ASSOCIATE</h2>
+
+			<p>The Technology Associate role is a rotational program at MicroStrategy where individuals spend time in Technical Support, Quality Engineering, and, ultimately, Beta Consulting. The Associate Product Manager position was an unplanned but exciting detour midway through my Quality Engineering rotation.</p>
 		</div>
 	
 
@@ -57,13 +82,13 @@
 		<div class="col-md-5">
 			<h3></h3>
 			<h3></h3>
-			<p>The Technology Associate role is a rotational program at MicroStrategy where individuals spend time in Technical Support, Quality Engineering, and, ultimately, Beta Consulting. The Associate Product Manager position was an unplanned but exciting detour midway through my Quality Engineering rotation.</p>
+			
 
 			<h3><b>Beta Consultant</b> | Beta Software Team</h3>
 				<p>Visited Fortune 500 companies to test beta software and demo new features, gathered customer feedback and reported back to stakeholders, and simultaneously led internal operational reporting projects focused customer satisfaction, performance tuning, and issue tracking.</p>
 
-			<h3><b>Associate Product Manager</b> | Mobile Marketing</h3>
-				<p>In addition to writing the first edition of <i>The Platform Approach to Mobile Apps</i> interactive iBook and creating the new <i>Introduction to Mobile</i> class for sales prospects and existing customers, I developed scripts, recorded voiceovers, and created app walkthrough videos.</p>
+			<h3><b>Associate Product Manager</b> | Mobile</h3>
+				<p>In addition to writing the first edition of <i>The Platform Approach to Mobile Apps</i> interactive iBook and creating the new <i>Introduction to Mobile</i> class for sales prospects and existing customers, I developed scripts, recorded voiceovers, and created app demo walkthrough videos.</p>
 
 			<h3><b>Associate Product Quality Engineer</b> | Analytical Engine</h3>
 				<p>While my main focus was testing the iOS and Flash capabilities on early builds of the new Report-Writing Engine and SmartClient technology, I also developed advanced test suites for freeform feature testing, logging over 100 defects in 4 months.</p>
