--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			<p class="navbar-text"><a href="pages/resume.html">Resume</a></p>
 			<p class="navbar-text"><a href="pages/education.html">Education</a></p>
 			<p class="navbar-text"><a href="pages/reading-list.html">Reading List</a></p>
+			<p class="navbar-text"><a href="about-me.html">About Erin</a></p>
 		</div>
 	</div>
 
@@ -26,12 +27,8 @@
 	<div class="container">
 
 		<div class="oldWork">
-			<h2>PORTFOLIO | Erin Kate Carlson</h2>
+			<h2>PORTFOLIO</h2>
 		</div>
-
-		<p><h3>Erin graduated with honors from Cornell University in 2011 with a double major in English and Spanish. She promptly surprised everyone she knew--and, most particularly, herself--by accepting an engineering role. Since then, her interests have grown in a more technical direction, but her penchant for spontaneous international travel, morning walks, and warm chocolate croissants remains unchanged.</h3></p>
-
-		<p><h3>While many of her engineering-related endeavors are proprietary information, here is a sampling of a few personal and professional projects:</h3></p>
 
 		<div class="col-md-12">
 
