--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 		<div class="container-fluid">
 			<p class="navbar-text">Portfolio</p>
 			<p class="navbar-text"><a href="pages/resume.html">Resume</a></p>
+			<p class="navbar-text"><a href="pages/publications.html">Publications</a></p>
 			<p class="navbar-text"><a href="pages/education.html">Education</a></p>
 			<p class="navbar-text"><a href="pages/reading-list.html">Reading List</a></p>
-			<p class="navbar-text"><a href="about-me.html">About Erin</a></p>
+			<p class="navbar-text"><a href="pages/about-me.html">About Erin</a></p>
 		</div>
 	</div>
 
