--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -17,6 +17,7 @@
 		<div class="container-fluid">
 			<p class="navbar-text"><a href="../index.html">Portfolio</a></p>
 			<p class="navbar-text"><a href="resume.html">Resume</a></p>
+			<p class="navbar-text"><a href="publications.html">Publications</a></p>
 			<p class="navbar-text"><a href="education.html">Education</a></p>
 			<p class="navbar-text"><a href="reading-list.html">Reading List</a></p>
 			<p class="navbar-text">About Me</p>
@@ -26,7 +27,7 @@
 	<div class="container">
 
 		<div class="oldWork">
-			
+
 			<h2>ABOUT ME</h2>
 
 			<p><p><h3>Erin graduated with honors from Cornell University in 2011 with a double major in English and Spanish. She promptly surprised everyone she knew--and, most particularly, herself--by accepting an engineering role. Since then, her interests have grown in a more technical direction, but her penchant for spontaneous international travel, morning walks, and warm chocolate croissants remains unchanged.</h3></p>
