--- a/pages/publications.html
+++ b/pages/publications.html
@@ -14,12 +14,12 @@
 
 	<div class="navbar navbar-default">
 		<div class="container-fluid">
-			<p class="navbar-text"><a href="../index.html">Portfolio</a></p>
-			<p class="navbar-text"><a href="resume.html">Resume</a></p>
-			<p class="navbar-text">Publications</p>
-			<p class="navbar-text"><a href="education.html">Education</a></p>
-			<p class="navbar-text"><a href="pages/reading-list.html">Reading List</p>
-			<p class="navbar-text"><a href="about-me.html">About Erin</a></p>
+			<p class="navbar-text"><a href="../index.html">PORTFOLIO</a></p>
+			<p class="navbar-text"><a href="resume.html">RESUME</a></p>
+			<p class="navbar-text">PUBLICATIONS</p>
+			<p class="navbar-text"><a href="education.html">EDUCATION</a></p>
+			<p class="navbar-text"><a href="pages/reading-list.html">READING LIST</p>
+			<p class="navbar-text"><a href="about-me.html">ABOUT ERIN</a></p>
 		</div>
 	</div>
 
@@ -33,7 +33,7 @@
 		
 		<div class="media">
   			<div class="media-left">
-    			<img src="../images/ri-recommendations-enterprise.png" class="media-object" style="width:300px">
+    			<a href="https://aws.amazon.com/blogs/enterprise-strategy/accessing-your-ri-purchase-recommendations-and-identifying-opportunities-for-cost-optimization/" target="_blank"><img src="../images/ri-recommendations-enterprise.png"  class="media-object" style="width:300px"></a>
   			</div>
 
   			<div class="media-body">
@@ -45,19 +45,19 @@
 
 		<div class="media">
   			<div class="media-left">
-    			<img src="../images/ri-savings.png" class="media-object" style="width:300px">
+    			<a href="https://aws.amazon.com/blogs/enterprise-strategy/managing-your-cost-savings-with-amazon-reserved-instances/" target="_blank"><img src="../images/ri-savings.png" class="media-object" style="width:300px"></a>
   			</div>
 
   			<div class="media-body">
     			<h4 class="media-heading">Managing Your Cost Savings with Amazon Reserved Instances</h4>
     			<p><b>AWS Cloud Enterprise Strategy Blog | August 27, 2018</b></p>
-    			<p>One of the key areas where organizations can unlock significant savings is by purchasing Reserved Instances (RIs) and other reservation-based offerings, which are currently offered by Amazon EC2, Amazon RDS, Amazon Redshift, Amazon ElastiCache, and Amazon Elasticsearch. <a href="https://aws.amazon.com/blogs/enterprise-strategy/managing-your-cost-savings-with-amazon-reserved-instances/">View Publication</a></p>
+    			<p>One of the key areas where organizations can unlock significant savings is by purchasing Reserved Instances (RIs) and other reservation-based offerings, which are currently offered by Amazon EC2, Amazon RDS, Amazon Redshift, Amazon ElastiCache, and Amazon Elasticsearch. <a href="https://aws.amazon.com/blogs/publicsector/controlling-how-your-aws-credits-and-ri-discounts-are-shared-across-your-organization/">View Publication</a></p>
   			</div>
 		</div>
 
 		<div class="media">
   			<div class="media-left">
-    			<img src="../images/aws-discount-preferences.png" class="media-object" style="width:300px">
+    			<a href="https://aws.amazon.com/blogs/enterprise-strategy/managing-your-cost-savings-with-amazon-reserved-instances/" target="_blank"><img src="../images/aws-discount-preferences.png" class="media-object" style="width:300px"></a>
   			</div>
 
   			<div class="media-body">
@@ -69,7 +69,7 @@
 
 		<div class="media">
   			<div class="media-left">
-    			<img src="../images/ri-recommendations-rds.jpg" class="media-object" style="width:300px">
+    			<a href="https://aws.amazon.com/blogs/database/using-aws-cost-management-products-to-help-save-costs-on-amazon-rds-reserved-instances/" target="_blank"><img src="../images/ri-recommendations-rds.jpg" class="media-object" style="width:300px"></a>
   			</div>
 
   			<div class="media-body">
@@ -81,7 +81,7 @@
 
 		<div class="media">
   			<div class="media-left">
-    			<img src="../images/getting-started-cost-management.png" class="media-object" style="width:300px">
+    			<a href="https://aws.amazon.com/blogs/startups/getting-started-with-aws-cost-management/" target="_blank"><img src="../images/getting-started-cost-management.png" class="media-object" style="width:300px"></a>
   			</div>
 
   			<div class="media-body">
