--- a/pages/resume.html
+++ b/pages/resume.html
@@ -36,8 +36,8 @@
 					<ul>
 						<li>Own the AWS Commerce Platform launch portfolio, spanning 20+ Engineering teams in the AWS Insights, Bill Generation, and FinX spaces</li>
 						<li>Define and oversee the product marketing vision for the AWS Cost Management product suite (which comprises AWS Cost Explorer, AWS Budgets, the AWS Cost & Usage Reports, and related products)</li>
-						<li>Design, author, and maintain the <a href="www.aws.amazon.com/aws-cost-management">AWS Cost Management</a> webpages and associated marketing collateral (e.g., What's New product category, Release Notes, etc.)</li>
-						<li>Create, publish, and approve all blog-, tutorial-, and launch-related content</li>
+						<li>Design, author, and maintain the <a href="www.aws.amazon.com/aws-cost-management">AWS Cost Management</a> webpages and associated marketing collateral (e.g., publish launch-related updates to the brand's What's New product category, Release Notes, etc.)</li>
+						<li>Create, publish, and approve all blog-, tutorial-, and launch-related content. Please refer to the <a href="publications.html">Publications</a> page to learn more.</li>
 						<li>Set, track, and report back on product adoption and engagement benchmarks for the team</li>
 						<li>Responsible for overseeing the team’s Monthly Business Review document</li>
 					</ul>
