Capitalization in Navigation
Improved look and feel

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<a data-toggle="modal" data-target="#mstrModal">MicroStrategy Analytics</a>
 				</h3>
 
-				<p>Over the last 5 years, I have used MicroStrategy for any number of customer use cases; however, this dashboard was personal. I need to start planning next year's vacations around the DC cherry blossoms.</p>
+				<p>Over the last 5+ years, I have used MicroStrategy for any number of customer use cases; however, this dashboard was personal. I need to start planning next year's vacations around the DC cherry blossoms.</p>
 			</div>
 
 			<div class="col-md-4 portfolio-pic">
