--- a/pages/reading-list.html
+++ b/pages/reading-list.html
@@ -14,12 +14,12 @@
 
 	<div class="navbar navbar-default">
 		<div class="container-fluid">
-			<p class="navbar-text"><a href="../index.html">Portfolio</a></p>
-			<p class="navbar-text"><a href="resume.html">Resume</a></p>
-			<p class="navbar-text"><a href="publications.html">Publications</a></p>
-			<p class="navbar-text"><a href="education.html">Education</a></p>
-			<p class="navbar-text">Reading List</p>
-			<p class="navbar-text"><a href="about-me.html">About Erin</a></p>
+			<p class="navbar-text"><a href="../index.html">PORTFOLIO</a></p>
+			<p class="navbar-text"><a href="resume.html">RESUME</a></p>
+			<p class="navbar-text"><a href="publications.html">PUBLICATIONS</a></p>
+			<p class="navbar-text"><a href="education.html">EDUCATION</a></p>
+			<p class="navbar-text">READING LIST</p>
+			<p class="navbar-text"><a href="about-me.html">ABOUT ERIN</a></p>
 		</div>
 	</div>
 
