--- a/pages/resume.html
+++ b/pages/resume.html
@@ -15,12 +15,12 @@
 
 	<div class="navbar navbar-default">
 		<div class="container-fluid">
-			<p class="navbar-text"><a href="../index.html">Portfolio</a></p>
-			<p class="navbar-text">Resume</p>
-			<p class="navbar-text"><a href="publications.html">Publications</a></p>
-			<p class="navbar-text"><a href="education.html">Education</a></p>
-			<p class="navbar-text"><a href="reading-list.html">Reading List</a></p>
-			<p class="navbar-text"><a href="about-me.html">About Erin</a></p>
+			<p class="navbar-text"><a href="../index.html">PORTFOLIO</a></p>
+			<p class="navbar-text">RESUME</p>
+			<p class="navbar-text"><a href="publications.html">PUBLICATIONS</a></p>
+			<p class="navbar-text"><a href="education.html">EDUCATION</a></p>
+			<p class="navbar-text"><a href="reading-list.html">READING LIST</a></p>
+			<p class="navbar-text"><a href="about-me.html">ABOUT ERIN</a></p>
 		</div>
 	</div>
 
@@ -103,10 +103,8 @@
 	<div class="container">
 
 		<div class="oldWork">
-			<h2>BACK IN THE DAY</h2>
+			<h2>(IR)RELEVANT PROFESSIONAL EXPERIENCE</h2>
 		</div>
-
-			<p>While these jobs may no longer be strictly relevant to my day-to-day life, I wouldn't be the same person without the knowledge and skills gained over these years.</p>
 			
 			<div class="col-md-4">
 				<p><h3><b>Cornell University</b></h3></p>
