--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -15,12 +15,12 @@
 
 	<div class="navbar navbar-default">
 		<div class="container-fluid">
-			<p class="navbar-text"><a href="../index.html">Portfolio</a></p>
-			<p class="navbar-text"><a href="resume.html">Resume</a></p>
-			<p class="navbar-text"><a href="publications.html">Publications</a></p>
-			<p class="navbar-text"><a href="education.html">Education</a></p>
-			<p class="navbar-text"><a href="reading-list.html">Reading List</a></p>
-			<p class="navbar-text">About Me</p>
+			<p class="navbar-text"><a href="../index.html">PORTFOLIO</a></p>
+			<p class="navbar-text"><a href="resume.html">RESUME</a></p>
+			<p class="navbar-text"><a href="publications.html">PUBLICATIONS</a></p>
+			<p class="navbar-text"><a href="education.html">EDUCATION</a></p>
+			<p class="navbar-text"><a href="reading-list.html">READING LIST</a></p>
+			<p class="navbar-text">ABOUT ERIN</p>
 		</div>
 	</div>
 
