--- a/pages/education.html
+++ b/pages/education.html
@@ -14,12 +14,12 @@
 
 	<div class="navbar navbar-default">
 		<div class="container-fluid">
-			<p class="navbar-text"><a href="../index.html">Portfolio</a></p>
-			<p class="navbar-text"><a href="resume.html">Resume</a></p>
-			<p class="navbar-text"><a href="publications.html">Publications</a></p>
-			<p class="navbar-text">Education</p>
-			<p class="navbar-text"><a href="reading-list.html">Reading List</a></p>
-			<p class="navbar-text"><a href="about-me.html">About Erin</a></p>
+			<p class="navbar-text"><a href="../index.html">PORTFOLIO</a></p>
+			<p class="navbar-text"><a href="resume.html">RESUME</a></p>
+			<p class="navbar-text"><a href="publications.html">PUBLICATIONS</a></p>
+			<p class="navbar-text">EDUCATION</p>
+			<p class="navbar-text"><a href="reading-list.html">READING LIST</a></p>
+			<p class="navbar-text"><a href="about-me.html">ABOUT ERIN</a></p>
 		</div>
 
 
