--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 
 	<div class="navbar navbar-default">
 		<div class="container-fluid">
-			<p class="navbar-text">PORTFOLIO</p>
-			<p class="navbar-text"><a href="pages/resume.html">RESUME</a></p>
-			<p class="navbar-text"><a href="pages/publications.html">PUBLICATIONS</a></p>
-			<p class="navbar-text"><a href="pages/reading-list.html">READING LIST</a></p>
-			<p class="navbar-text"><a href="pages/about-me.html">ABOUT ERIN</a></p>
+			<p class="navbar-text">Portfolio</p>
+			<p class="navbar-text"><a href="pages/resume.html">Resume</a></p>
+			<p class="navbar-text"><a href="pages/publications.html">Publications</a></p>
+			<p class="navbar-text"><a href="pages/reading-list.html">Reading List</a></p>
+			<p class="navbar-text"><a href="pages/about-me.html">About Erin</a></p>
 		</div>
 	</div>
 
