--- a/pages/publications.html
+++ b/pages/publications.html
@@ -17,7 +17,7 @@
 			<p class="navbar-text"><a href="../index.html">PORTFOLIO</a></p>
 			<p class="navbar-text"><a href="resume.html">RESUME</a></p>
 			<p class="navbar-text">PUBLICATIONS</p>
-			<p class="navbar-text"><a href="pages/reading-list.html">READING LIST</p>
+			<p class="navbar-text"><a href="reading-list.html">READING LIST</p>
 			<p class="navbar-text"><a href="about-me.html">ABOUT ERIN</a></p>
 		</div>
 	</div>
