--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -76,7 +76,116 @@
 		</div>
 		
 	</div>
+<div class="container">
 
+		<div class="oldWork">
+			<h2>PRODUCT MARKETING MANAGER</h2>
+		</div>
+
+			<div class="col-md-12"
+
+				<h3><b>AWS Cost Management | Amazon Web Services, Inc.</b></h3>
+					<ul>
+						<li>Own the AWS Commerce Platform launch portfolio, spanning 20+ Engineering teams in the AWS Insights, Bill Generation, and FinX spaces</li>
+						<li>Define and oversee the product marketing vision for the AWS Cost Management product suite (which comprises AWS Cost Explorer, AWS Budgets, the AWS Cost & Usage Reports, and related products)</li>
+						<li>Design, author, and maintain the <a href="www.aws.amazon.com/aws-cost-management">AWS Cost Management</a> webpages and associated marketing collateral (e.g., publish launch-related updates to the brand's What's New product category, Release Notes, etc.)</li>
+						<li>Create, publish, and approve all blog-, tutorial-, and launch-related content. Please refer to the <a href="publications.html">Publications</a> page to learn more.</li>
+						<li>Set, track, and report back on product adoption and engagement benchmarks for the team</li>
+						<li>Responsible for overseeing the team’s Monthly Business Review document</li>
+					</ul>
+			</div>
+
+	</div>
+
+		<div class="container">
+
+		<div class="oldWork">
+			<h2>DIRECTOR & AREA PRODUCT OWNER</h2>
+		</div>
+
+			<div class="col-md-12"
+
+				<h3><b>Tools Product Engineering Group | MicroStrategy, Inc.</b></h3>
+					<ul>
+						<li>Led innovation tiger team of engineers, architects, UI/UX designers, and a HCI scientist to first external release</li>
+						<li>Owned the product vision and formulated supporting user stories, features, wireframes, and product specs</li>
+						<li>Collaborated weekly with the CEO, CTO, and key stakeholders to define the product roadmap and execute on roadmap goals</li>
+						<li>Acted as internal product evangelist and presented to 500+ attendees at the annual MicroStrategy World conference</li>
+						<li>Previous: Managed six product engineering and design teams (30 total reports) during the company’s transition to Agile/Scrum methodologies and Rally Software</li>
+					</ul>
+			</div>
+
+	</div>
+
+
+
+	<div class="container">
+		<div class="oldWork">
+			<h2>TECHNOLOGY ASSOCIATE</h2>
+
+			<p>The Technology Associate role is a rotational program at MicroStrategy where individuals spend time in Technical Support, Quality Engineering, and, ultimately, Beta Consulting. The Associate Product Manager position was an unplanned but exciting detour midway through my Quality Engineering rotation, which equipped me with the skills I needed to handle another unexpected career maneuver &mdash serving as the CEO's technical liaison for over a year.</p>
+		</div>
+	
+
+		<div class="col-md-7">
+			<img id="mainpic" src="../images/erincarlson_cropped.JPG">
+		</div>
+		
+		<div class="col-md-5">
+			<h3></h3>
+			<h3></h3>
+			
+			<h3><b>Technical Liaison to the CEO</b> | Strategic Projects</h3>
+				<p>Oversaw the execution of projects relating to diverse areas of company investment, including an analytics-related innovation project (now launched externally as the "MicroStrategy Dossier"), developing a reporting layer across mobile software enabling physical and logical access, deploying and selling proprietary software on top of Amazon Web Services, and more.</p>
+
+			<h3><b>Beta Consultant</b> | Beta Software Team</h3>
+				<p>Visited Fortune 500 companies to test beta software and demo new features, gathered customer feedback and reported back to stakeholders, and simultaneously led internal operational reporting projects focused customer satisfaction, performance tuning, and issue tracking.</p>
+
+			<h3><b>Associate Product Manager</b> | Mobile</h3>
+				<p>In addition to writing the first edition of <i>The Platform Approach to Mobile Apps</i> interactive iBook and creating the new <i>Introduction to Mobile</i> class for sales prospects and existing customers, I developed scripts, recorded voiceovers, and created app demo walkthrough videos.</p>
+
+			<h3><b>Associate Product Quality Engineer</b> | Analytical Engine</h3>
+				<p>While my main focus was testing the iOS and Flash capabilities on early builds of the new Report-Writing Engine and SmartClient technology, I also developed advanced test suites for freeform feature testing, logging over 100 defects in 4 months.</p>
+
+			<h3><b>Technical Support Engineer</b> | Client Experience</h3>
+				<p>Solved mission-critical customer issues via call and email in a fast-paced environment, frequently recognized as the team's top case taker.</p>
+		</div>
+	</div>
+
+	<div class="container">
+
+		<div class="oldWork">
+			<h2>(IR)RELEVANT PROFESSIONAL EXPERIENCE</h2>
+		</div>
+			
+			<div class="col-md-4">
+				<p><h3><b>Cornell University</b></h3></p>
+					<ul>
+						<li><b>Counselor & Instructor</b> | Empathy, Assistance, &amp Referral Service</li>
+						<li><b>Front Desk</b> | International Students &amp Scholars Office</li>
+						<li><b>Administrative Assistant</b> | Office of the Vice Provost for Research</li>
+						
+					</ul>
+			</div>
+
+			<div class="col-md-4">
+				<p><h3><b>City of Healdsburg</b></h3></p>
+					<ul>
+						<li><b>Front Desk</b> | Healdsburg Pool</li>
+						<li><b>Summer Camp Counselor</b> | Department of Parks and Recreation</li>
+						<li><b>Archivist & GIS Intern</b> | Office of the City Clerk</li>
+					</ul>
+			</div>
+
+			<div class="col-md-4">
+				<p><h3><b>Metropolitan Transportation Commission</b></h3></p>
+					<ul>
+						<li><b>Transportation Intern</b> | Department of Public Works at the City of Healdsburg</li>
+						<li><b>Archivist & GIS Intern</b> | Healdsburg City Hall</li>
+					</ul>	
+			</div>	
+
+		</div>
 
 
 </body>
