--- a/pages/resume.html
+++ b/pages/resume.html
@@ -23,10 +23,11 @@
 		</div>
 	</div>
 
+
 	<div class="container">
 
 		<div class="oldWork">
-			<h2>PRODUCT MARKETING MANAGER</h2>
+			<h2>AMAZON WEB SERVICES</h2>
 		</div>
 
 			<div class="col-md-12"
@@ -44,15 +45,15 @@
 
 	</div>
 
-		<div class="container">
+	<div class="container">
 
 		<div class="oldWork">
-			<h2>DIRECTOR & AREA PRODUCT OWNER</h2>
+			<h2>MicroStrategy, Inc.</h2>
 		</div>
 
 			<div class="col-md-12"
 
-				<h3><b>Tools Product Engineering Group | MicroStrategy, Inc.</b></h3>
+				<h3><b>DIRECTOR & AREA PRODUCT OWNER | Tools Product Engineering Group</b></h3>
 					<ul>
 						<li>Led innovation tiger team of engineers, architects, UI/UX designers, and a HCI scientist to first external release</li>
 						<li>Owned the product vision and formulated supporting user stories, features, wireframes, and product specs</li>
@@ -71,42 +72,42 @@
 			<h2>TECHNOLOGY ASSOCIATE</h2>
 
 			<p>The Technology Associate role is a rotational program at MicroStrategy where individuals spend time in Technical Support, Quality Engineering, and, ultimately, Beta Consulting. The Associate Product Manager position was an unplanned but exciting detour midway through my Quality Engineering rotation, which equipped me with the skills I needed to handle another unexpected career maneuver &mdash serving as the CEO's technical liaison for over a year.</p>
-		</div>
 	
 
-		<div class="col-md-7">
-			<img id="mainpic" src="../images/erincarlson_cropped.JPG">
-		</div>
+			<div class="col-md-7">
+				<img id="mainpic" src="../images/erincarlson_cropped.JPG">
+			</div>
 		
-		<div class="col-md-5">
-			<h3></h3>
-			<h3></h3>
+			<div class="col-md-5">
+				<h3></h3>
+				<h3></h3>
 			
-			<h3><b>Technical Liaison to the CEO</b> | Strategic Projects</h3>
+				<h4><b>Technical Liaison to the CEO</b> | Strategic Projects</h4>
 				<p>Oversaw the execution of projects relating to diverse areas of company investment, including an analytics-related innovation project (now launched externally as the "MicroStrategy Dossier"), developing a reporting layer across mobile software enabling physical and logical access, deploying and selling proprietary software on top of Amazon Web Services, and more.</p>
 
-			<h3><b>Beta Consultant</b> | Beta Software Team</h3>
+				<h4><b>Beta Consultant</b> | Beta Software Team</h4>
 				<p>Visited Fortune 500 companies to test beta software and demo new features, gathered customer feedback and reported back to stakeholders, and simultaneously led internal operational reporting projects focused customer satisfaction, performance tuning, and issue tracking.</p>
 
-			<h3><b>Associate Product Manager</b> | Mobile</h3>
+				<h4><b>Associate Product Manager</b> | Mobile</h4>
 				<p>In addition to writing the first edition of <i>The Platform Approach to Mobile Apps</i> interactive iBook and creating the new <i>Introduction to Mobile</i> class for sales prospects and existing customers, I developed scripts, recorded voiceovers, and created app demo walkthrough videos.</p>
 
-			<h3><b>Associate Product Quality Engineer</b> | Analytical Engine</h3>
+				<h4><b>Associate Product Quality Engineer</b> | Analytical Engine</h4>
 				<p>While my main focus was testing the iOS and Flash capabilities on early builds of the new Report-Writing Engine and SmartClient technology, I also developed advanced test suites for freeform feature testing, logging over 100 defects in 4 months.</p>
 
-			<h3><b>Technical Support Engineer</b> | Client Experience</h3>
+				<h4><b>Technical Support Engineer</b> | Client Experience</h4>
 				<p>Solved mission-critical customer issues via call and email in a fast-paced environment, frequently recognized as the team's top case taker.</p>
+			</div>
 		</div>
 	</div>
 
 	<div class="container">
 
 		<div class="oldWork">
-			<h2>(IR)RELEVANT PROFESSIONAL EXPERIENCE</h2>
+			<h3>(IR)RELEVANT PROFESSIONAL EXPERIENCE</h3>
 		</div>
 			
 			<div class="col-md-4">
-				<p><h3><b>Cornell University</b></h3></p>
+				<p><h4><b>Cornell University</b></h4></p>
 					<ul>
 						<li><b>Counselor & Instructor</b> | Empathy, Assistance, &amp Referral Service</li>
 						<li><b>Front Desk</b> | International Students &amp Scholars Office</li>
@@ -116,7 +117,7 @@
 			</div>
 
 			<div class="col-md-4">
-				<p><h3><b>City of Healdsburg</b></h3></p>
+				<p><h4><b>City of Healdsburg</b></h4></p>
 					<ul>
 						<li><b>Front Desk</b> | Healdsburg Pool</li>
 						<li><b>Summer Camp Counselor</b> | Department of Parks and Recreation</li>
@@ -125,7 +126,7 @@
 			</div>
 
 			<div class="col-md-4">
-				<p><h3><b>Metropolitan Transportation Commission</b></h3></p>
+				<p><h4><b>Metropolitan Transportation Commission</b></h4></p>
 					<ul>
 						<li><b>Transportation Intern</b> | Department of Public Works at the City of Healdsburg</li>
 						<li><b>Archivist & GIS Intern</b> | Healdsburg City Hall</li>
