fixed 3 image urls
fixed 3 image urls

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 
 	<div class="lead-container">
-		<img src="./images/erin-carlson-leading-image.JPG" width=100%>
+		<img src="images/erin-carlson-leading-image.JPG" width=100%>
 			<div class="lead-text">
 				<h1>Hi, There! I'm Erin.</h1>
 			</div>
@@ -385,7 +385,7 @@
 							<h3>Amazon Web Services</h3>
 						</div>
 						<div class="col-md-5">
-							<img id="aws-pic" src="./images/erin-roof.JPG" width=100%>
+							<img id="aws-pic" src="images/erin-roof.JPG" width=100%>
 						</div>
 
 						<div class="col-md-7">
@@ -450,7 +450,7 @@
 						</div>
 
 						<div class="col-md-5">
-							<img id="mainpic" src="./images/erincarlson_cropped.JPG">
+							<img id="mainpic" src="images/erincarlson_cropped.JPG">
 						</div>
 
 					</div>
