--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 
 	<div class="lead-container">
-		<img src="images/erin-carlson-leading-image.JPG" width=100%>
+		<img src="images/erin-carlson-leading-image.JPG" width=100% alt="Leading Image">
 			<div class="lead-text">
 				<h1>Hi, There! I'm Erin.</h1>
 			</div>
