--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
 
 	<div class="lead-container">
-		<img src="/images/erin-carlson-leading-image.JPG" width=100% alt="Leading Image">
+		<img src="/images/erin-carlson-leading-image.jpg" width=100% alt="Leading Image">
 			<div class="lead-text">
 				<h1>Hi, There! I'm Erin.</h1>
 			</div>
@@ -385,7 +385,7 @@
 							<h3>Amazon Web Services</h3>
 						</div>
 						<div class="col-md-5">
-							<img id="aws-pic" src="/images/erin-roof.JPG" width=100%>
+							<img id="aws-pic" src="/images/erin-roof.jpg" width=100%>
 						</div>
 
 						<div class="col-md-7">
