Added detailed pages

--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@
 			<div class="col-md-12">
 				<div class="col-md-8">
 					<h2>PRODUCT LEADER WITH A PASSION FOR UX</h2>
-					<h3>10 years of experience building bridges across Product, Marketing, UX, and Engineering</h3>
+					<p>10 years of experience building bridges across Product, Marketing, UX, and Engineering. These days, you can find me over on UX side of the house (and I'm loving every minute of it)!</p>
+					<p>Please forgive any bugs! I'm still learning the ins and outs of Bootstrap 4 after a recent migration.</p>
 				</div>
 
 					
@@ -236,7 +237,7 @@
 					            		<div class="col-sm-6 col-md-4">
 					              			<a href="https://www.microstrategy.com/Strategy/media/downloads/white-papers/The-Platform-Approach-to-Mobile-Apps.pdf" target="_blank">
 					                		<img src="images/ibook.png" alt="Portfolio Item" class="img-fluid">
-												<h4>Product Evangelism</h4>
+												<h4>Product Evangelism & Training</h4>
 												</a>
 												<p>A core part of every Product Manager's life is providing training resources to their customers. I may have gone overboard with this particular iBook.</p>
 					              			</a>
@@ -258,7 +259,7 @@
 					            		</div>
 					            		
 					            		<div class="col-sm-6 col-md-4">
-					              			<a href="https://www.youtube.com/watch?v=oB75RtI9lU4" target="_blank">
+					              			<a href="https://www.youtube.com/watch?v=io52P0TjzLY" target="_blank">
 					                		<img src="images/videoediting.png" alt="Portfolio Item" class="img-fluid">
 												<h4>Public Speaking & Voiceovers</h4>
 												</a>
@@ -266,7 +267,7 @@
 					              			</a>
 					            		</div>
 					            		<div class="col-sm-6 col-md-4">
-					              			<a href="https://www.facebook.com/swipixapp" target="_blank">
+					              			<a href="../pages/content-strategy.html" target="_blank">
 					                			<img src="images/Swipix.png" alt="Portfolio Item" class="img-fluid"/>
 					              				<h4>Content Strategy</h4>
 											</a>
