Added links to detail pages

--- a/pages/analytics.html
+++ b/pages/analytics.html
@@ -66,5 +66,11 @@
       <h4>My Data-Driven Prediction: <b>April 4, 2016</b></h4>
     </div>
 
+  <footer>
+    <div class="poop">
+      <p>2020 | Erin Carlson | Website constantly under construction, pardon the bugs</p>
+    </div>
+  </footer>
+
 </body>
 </html>
