--- a/pages/content-strategy.html
+++ b/pages/content-strategy.html
@@ -63,5 +63,12 @@
         <p>Within several days of the initial release, hundreds of individuals in 42 different countries downloaded the app. Not bad for a last-minute grassroots marketing campaign!</p> 
     </div>
 
+
+  <footer>
+    <div class="poop">
+      <p>2020 | Erin Carlson | Website constantly under construction, pardon the bugs</p>
+    </div>
+  </footer>
+
 </body>
 </html>
