--- a/pages/information-architecture.html
+++ b/pages/information-architecture.html
@@ -66,6 +66,11 @@
       
     </div>
 
+      <footer>
+    <div class="poop">
+      <p>2020 | Erin Carlson | Website constantly under construction, pardon the bugs</p>
+    </div>
+  </footer>
 
 </body>
 </html>
