--- a/pages/user-research.html
+++ b/pages/user-research.html
@@ -76,7 +76,13 @@
           <img class="img-responsive" src="../images/SketchInterface.jpg">
       
     </div>
+  
 
+  <footer>
+    <div class="poop">
+      <p>2020 | Erin Carlson | Website constantly under construction, pardon the bugs</p>
+    </div>
+  </footer>
 
 </body>
 </html>
