--- a/pages/agile-user-story.html
+++ b/pages/agile-user-story.html
@@ -59,5 +59,11 @@
         <p>In order to do this, we should surface a setting in the Server Administration properties dialog that empowers administrators specify how many total rows that they feel comfortable sending to the database server. If exceeded, the error message ought to instruct users to contact their administrators to increase the number of allowed rows.</p>
     </div>
 
+      <footer>
+    <div class="poop">
+      <p>2020 | Erin Carlson | Website constantly under construction, pardon the bugs</p>
+    </div>
+  </footer>
+
 </body>
 </html>
